[package]
name = "penningar"
version = "0.0.1"
edition = "2021"
authors = ["Tim Janke <tim+github@janke.biz>"]
description = "TODO"
license = "MIT"
readme = "README.md"
rust-version = "1.80.0"
publish = false
repository = "https://github.com/flying7eleven/penningar"
exclude = [".github/", ".gitignore"]

[dependencies.chrono]
version = "0.4.39"
default-features = false
features = ["clock"]

[dependencies.dotenv]
version = "0.15.0"
default-features = false

[dependencies.fern]
version = "0.7.1"
default-features = false

[dependencies.log]
version = "0.4.22"
default-features = false

[dependencies.reqwest]
version = "0.12.9"
default-features = false
features = ["blocking", "native-tls", "json"]

[dependencies.serde]
version = "1.0.216"
default-features = false
features = ["std", "derive"]